# image-match

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py
docs/superpowers/plans/: 2026-04-07-modernization.md
docs/superpowers/specs/: 2026-04-07-modernization-design.md
image_match/: __init__.py  _es_base.py  elasticsearch_driver.py  elasticsearch_driver_es7.py  elasticsearch_driver_es8.py  goldberg.py  signature_database_base.py
tests/: conftest.py  test_elasticsearch_driver.py  test_elasticsearch_driver_es8.py  test_elasticsearch_driver_metadata_as_nested.py  test_goldberg.py
