[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_match"
version = "2.0.0"
description = "image_match is a simple package for finding approximate image matches from a corpus."
requires-python = ">=3.12"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Ryan Henderson", email = "ryan@bigchaindb.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "scikit-image>=0.19",
    "numpy>=1.24",
    "Pillow>=9.0",
]

[project.optional-dependencies]
es7 = ["elasticsearch>=7.0.0,<8.0.0"]
es8 = ["elasticsearch>=8.0.0,<9.0.0"]
test = ["pytest", "pytest-cov", "ruff"]
dev = ["pytest", "pytest-cov", "ruff", "ipython"]
extra = ["cairosvg>=2.0"]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".*", "*.egg", "*.egg-info", "env*", "devenv*", "docs", "venv"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
